deploy/kubernetes-dev-master.yml
# 创建service为${PROJECT_MASTER_NAME}
apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_MASTER_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${PROJECT_MASTER_NAME}
    release: canary
  ports:
    - name: http
      targetPort: 8080
      port: 8080

---
# 创建后端服务的pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_MASTER_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_MASTER_NAME}
      release: canary
  template:
    metadata:
      labels:
        app: ${PROJECT_MASTER_NAME}
        release: canary
    spec:
      imagePullSecrets:
        - name: aliyun-docker-registry
      containers:
        - name: ${PROJECT_MASTER_NAME}
          image: ${ALIYUN_CR_REGISTORY}/${ALIYUN_CR_NAMESPACE}/${PROJECT_MASTER_NAME}:${VERSION}
          ports:
            - name: http
              containerPort: 8080
