deploy/kubernetes-dev-worker.yml
# 创建service为alinesno-infra-data-${PROJECT_WORKER_NAME}
apiVersion: v1
kind: Service
metadata:
  name: alinesno-infra-data-${PROJECT_WORKER_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    app: alinesno-infra-data-${PROJECT_WORKER_NAME}
    release: canary
  ports:
    - name: http
      targetPort: 8080
      port: 8080

---
# 创建后端服务的pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alinesno-infra-data-${PROJECT_WORKER_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alinesno-infra-data-${PROJECT_WORKER_NAME}
      release: canary
  template:
    metadata:
      labels:
        app: alinesno-infra-data-${PROJECT_WORKER_NAME}
        release: canary
    spec:
      imagePullSecrets:
        - name: aliyun-docker-registry
      containers:
        - name: alinesno-infra-data-${PROJECT_WORKER_NAME}
          image: ${ALIYUN_CR_REGISTORY}/${ALIYUN_CR_NAMESPACE}/alinesno-infra-data-${PROJECT_WORKER_NAME}:${VERSION}
          ports:
            - name: http
              containerPort: 8080
